--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Pokedex</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div id="header">
-        <!-- Add Search functionality. Also add an order by functionality -->
+        <!-- Add Search functionality. -->
         <h1>Pokedex</h1>
         <input type="text" id="search" placeholder="Search Pokemon">
         </div>
@@ -19,9 +20,7 @@
             </div>
         </div>
         <div id="pokemon-container">
-            <!-- <p>Pokemon</p> -->
             <br>
-            <!-- <ul id="pokemon-list"></ul> -->
         </div>
         <script src="script.js"></script>
     </body>
